2005-05-05  Bruno Haible  <bruno@clisp.org>

	* dcigettext.c (_nl_find_msg) [_LIBC]: Update norm_add_slashes call.
	2004-03-24  Roland McGrath  <roland@redhat.com>
		* loadmsgcat.c (_nl_init_domain_conv): Update norm_add_slashes
		call.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	* localealias.c (read_alias_file): Limit last patch to _LIBC case.

2003-09-04  Ulrich Drepper  <drepper@redhat.com>

	* localealias.c (read_alias_file): Use fopen with 'c' mode flag.

2003-09-03  Jakub Jelinek  <jakub@redhat.com>

	* loadmsgcat.c (open, close, read, mmap, munmap): Define as
	function-like macros.

2003-09-02  Ulrich Drepper  <drepper@redhat.com>

	* loadmsgcat.c: For _LIBC, call not cancelable versions of open, close,
	and read.

2003-06-18  Ulrich Drepper  <drepper@redhat.com>

	* localealias.c (read_alias_file): Determine whether line is read
	incompletely early, before we modify the line.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	* hash-string.h (__hash_string): Define differently outside glibc.
	* hash-string.c: Include config.h.
	* Makefile.in (SOURCES): Add hash-string.c.
	(OBJECTS): Add hash-string.$lo.
	(hash-string.lo): New rule.
	(hash-string.$lo): Depend on hash-string.h.
	* Makefile.msvc (OBJECTS): Add hash-string.obj.
	(hash-string.obj): New rule.
	* Makefile.vms (OBJECTS): Add hash-string.obj.
	(hash-string.obj): New rule.

2003-06-11  Ulrich Drepper  <drepper@redhat.com>

	Remove warnings gcc 3.3 shows.
	* hash-string.c: New file.
	* hash-string.h: Remove hash_string definition.  Declare __hash_string.
	* dcigettext.c (_nl_find_msg): Adjust hash_string caller.
	* loadmsgcat.c (_nl_load_domain): Likewise.

2003-04-29  Jakub Jelinek  <jakub@redhat.com>

	* plural.y: Include string.h. Needed because recent versions of bison
	generate output that uses memcpy().

2003-01-07  Ulrich Drepper  <drepper@redhat.com>

	* explodename.c (_nl_find_language.c): Mark as static.
	* loadinfo.h: Remove _nl_find_language prototype.
